[package]
edition = "2021"
name = "axum-implicit-retry-repro"
version = "0.1.0"

[dependencies]

axum = "0.5.11"

tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace", "timeout"] }
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }

tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
tracing-tree = "0.2.1"
tracing-error = "0.2.0"

serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
